EEVEE: World Volume Scatter broken on iGPU HD530 #120918

Closed
opened 2024-04-22 10:52:49 +02:00 by Jeroen Bakker · 0 comments
Member

System Information
Operating system: Linux-5.15.0-25-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: Mesa Intel(R) HD Graphics 530 (SKL GT2) Intel 4.6 (Core Profile) Mesa 22.0.1

Blender Version
Broken: version: 4.2.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: Unknown
Worked: (newest version of Blender that worked as expected)

Short description of error
When the world has a volume scatter the background renders with artifacts on iGPU HD520. When world volume is disabled it renders correct.

Exact steps for others to reproduce the error

image

image

Looking at the shader it only does depth testing, but doesn't have a fragment out. Perhaps the driver
makes an incorrect assumption here.

Some tests to perform:

  • bind a depth only framebuffer?
  • add fragment out and set it to vec4(0.0)

layout(depth_unchanged) out float gl_FragDepth;

**System Information** Operating system: Linux-5.15.0-25-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: Mesa Intel(R) HD Graphics 530 (SKL GT2) Intel 4.6 (Core Profile) Mesa 22.0.1 **Blender Version** Broken: version: 4.2.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: `Unknown` Worked: (newest version of Blender that worked as expected) **Short description of error** When the world has a volume scatter the background renders with artifacts on iGPU HD520. When world volume is disabled it renders correct. **Exact steps for others to reproduce the error** ![image](/attachments/a3aab0ca-216b-4a6e-bd67-a3c5e41df3ea) ![image](/attachments/dbbc4eee-a44b-43d2-aadd-ad82053259c9) Looking at the shader it only does depth testing, but doesn't have a fragment out. Perhaps the driver makes an incorrect assumption here. Some tests to perform: - bind a depth only framebuffer? - add fragment out and set it to vec4(0.0) `layout(depth_unchanged) out float gl_FragDepth;`
1.3 MiB
341 KiB
Jeroen Bakker added this to the 4.2 LTS milestone 2024-04-22 10:52:49 +02:00
Jeroen Bakker added the
Type
Bug
Status
Confirmed
Priority
Normal
labels 2024-04-22 10:52:49 +02:00
Jeroen Bakker added this to the EEVEE & Viewport project 2024-04-22 10:52:50 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-22 14:59:43 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120918
No description provided.