source/blender/draw/engines/eevee_next/eevee_volume.cc
@@ -362,12 +362,12 @@ void VolumeModule::draw_prepass(View &main_view)
   inst_.uniform_data.push_update();
 
   DRW_stats_group_start("Volumes");
+  occupancy_fb_.bind();
   inst_.pipelines.world_volume.render(main_view);
 
   volume_view.sync(main_view.viewmat(), winmat_infinite);
 
   if (inst_.pipelines.volume.is_enabled()) {
-    occupancy_fb_.bind();
     inst_.pipelines.volume.render(volume_view, occupancy_tx_);
   }
   DRW_stats_group_end();
